--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.log
 
 # Cache
+cache/
 /cache/*
 !/cache/.htaccess
 !/cache/cachefs/index.php
@@ -170,4 +171,3 @@ themes/default-bootstrap/modules/*/mails/*
 !var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
-
