--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,21 +12,115 @@ on:
       - master
 
 jobs:
-  build_and_deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and tag image
+        env:
+          IMAGE_NAME: geekup-prestashop
+          DOCKERFILE_PATH: ./configuration/Dockerfile
+        run: |
+          docker build -t $IMAGE_NAME:1.0 -f $DOCKERFILE_PATH .
+      
+      - name: Save Docker image as a file
+        env:
+          IMAGE_NAME: geekup-prestashop
+        run: |
+          docker save $IMAGE_NAME:1.0 -o image.tar
+      
+      - name: Upload Docker image artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: docker-image
+          path: image.tar
+
+  test:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: docker-image
+      
+      - name: Load Docker image
+        run: |
+          docker load -i image.tar
+        
+      - name: Tag image for Docker Compose
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          IMAGE_NAME: geekup-prestashop
+        run: |
+          docker tag $IMAGE_NAME:1.0 $DOCKERHUB_USERNAME/$IMAGE_NAME:1.4
+      
+      - name: Start PrestaShop environment
+        run: |
+          docker-compose -f docker-compose.dev.yml up -d
+
+      - name: Setup Google Chrome
+        uses: browser-actions/setup-chrome@v1
+
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Install Maven
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y maven
+
+      - name: Run Selenium Tests
+        run: |
+          mvn clean test -f selenium/Sellenium-Geekup/pom.xml
+      
+      - name: Stop PrestaShop environment
+        run: |
+          docker-compose -f docker-compose.dev.yml down
+      
+  push:
+    runs-on: ubuntu-latest
+    needs: 
+      - build
+      - test
+    steps:
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: docker-image
+      
+      - name: Load Docker image
+        run: |
+          docker load -i image.tar
+      
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build, tag and push image to DockerHub
+      
+      - name: Push image to DockerHub
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERFILE_PATH: ./configuration/Dockerfile
           IMAGE_NAME: geekup-prestashop
         run: |
-          docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest -f $DOCKERFILE_PATH .
-          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
+          docker tag $IMAGE_NAME:1.0 $DOCKERHUB_USERNAME/$IMAGE_NAME:1.0
+          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:1.0
