--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -86,6 +86,7 @@ jobs:
           sudo apt-get install -y maven
 
       - name: Build and run Java app
+        working-directory: selenium/Selenium-Geekup
         run: |
           mvn clean install
       
