--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
       - master
-  pull_request:
-    branches:
-      - main
-      - master
 
 jobs:
   build:
@@ -25,13 +21,13 @@ jobs:
           IMAGE_NAME: geekup-prestashop
           DOCKERFILE_PATH: ./configuration/Dockerfile
         run: |
-          docker build -t $IMAGE_NAME:1.0 -f $DOCKERFILE_PATH .
+          docker build -t $IMAGE_NAME:latest -f $DOCKERFILE_PATH .
       
       - name: Save Docker image as a file
         env:
           IMAGE_NAME: geekup-prestashop
         run: |
-          docker save $IMAGE_NAME:1.0 -o image.tar
+          docker save $IMAGE_NAME:latest -o image.tar
       
       - name: Upload Docker image artifact
         uses: actions/upload-artifact@v3
@@ -39,61 +35,10 @@ jobs:
           name: docker-image
           path: image.tar
 
-  test:
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
-
-      - name: Download Docker image artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: docker-image
-      
-      - name: Load Docker image
-        run: |
-          docker load -i image.tar
-        
-      - name: Tag image for Docker Compose
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          IMAGE_NAME: geekup-prestashop
-        run: |
-          docker tag $IMAGE_NAME:1.0 $DOCKERHUB_USERNAME/$IMAGE_NAME:1.4
-      
-      - name: Start PrestaShop environment
-        run: |
-          docker compose -f docker-compose.dev.yml up -d
-
-      - name: Setup Google Chrome
-        uses: browser-actions/setup-chrome@v1
-
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Install Maven
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y maven
-
-      - name: Build and run Java app
-        run: |
-          mvn -f ./selenium/Sellenium-Geekup/ clean install
-      
   push:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
     needs: 
       - build
-      - test
     steps:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
@@ -118,5 +63,5 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           IMAGE_NAME: geekup-prestashop
         run: |
-          docker tag $IMAGE_NAME:1.0 $DOCKERHUB_USERNAME/$IMAGE_NAME:1.0
-          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:1.0
+          docker tag $IMAGE_NAME:latest $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
+          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
