--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
       - master
 
 jobs:
-  build:
+  build_adn_push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -22,35 +22,6 @@ jobs:
           DOCKERFILE_PATH: ./configuration/Dockerfile
         run: |
           docker build -t $IMAGE_NAME:latest -f $DOCKERFILE_PATH .
-      
-      - name: Save Docker image as a file
-        env:
-          IMAGE_NAME: geekup-prestashop
-        run: |
-          docker save $IMAGE_NAME:latest -o image.tar
-      
-      - name: Upload Docker image artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: docker-image
-          path: image.tar
-
-  push:
-    runs-on: ubuntu-latest
-    needs: 
-      - build
-    steps:
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
-
-      - name: Download Docker image artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: docker-image
-      
-      - name: Load Docker image
-        run: |
-          docker load -i image.tar
       
       - name: Login to DockerHub
         uses: docker/login-action@v1
